--- a/wip/index.html
+++ b/wip/index.html
@@ -8,6 +8,14 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
@@ -23,6 +31,8 @@
     <ul class="right">
       <li class=""><a href="#">About Us</a></li>
       <li class=""><a href="#">Contact Us</a></li>
+      <li class=""><a href="#">About Us</a></li>
+      <li class=""><a href="#">Contact Us</a></li>
       <li class="has-form">
   <a href="http://foundation.zurb.com/docs" class="button">Donate</a>
 </li>
@@ -31,7 +41,7 @@
 </nav>
 
 
-    <div class="row">
+    <div class="row" style="margin-top:2em;">
       <div class="large-12 columns">
         <h1>Save Track Cycling in Minnesota</h1>
       </div>
@@ -40,7 +50,7 @@
 
     <div class="row">
       <div class="large-8 medium-8 columns">
-               <p>The NSC Velodrome - the only velodrome in Minnesota and a unique part of the USA’s small portfolio of velodromes - needs major repairs immediately.  The track is currently closed until it can be repaired. These repairs will extend the life of the facility, keeping the track cycling community active until a new, future velodrome facility is completed. We are asking the broad track cycling community to help out.</p>
+        <p>Introduction The NSC Velodrome - the only velodrome in Minnesota and a unique part of the USA’s small portfolio of velodromes - needs major repairs immediately.  The track is currently closed until it can be repaired. These repairs will extend the life of the facility, keeping the track cycling community active until a new, future velodrome facility is completed. We are asking the broad track cycling community to help out.</p>
         <p>Friends of Velodrome Racing in Minnesota must raise $60,000 in 5 months</p>
         <p>Friends of Velodrome Racing in Minnesota is a newly-formed, volunteer-run nonprofit organization working to keep track cycling in Minnesota. </p>
         <p>The Velodrome is owned and operated by the National Sports Center Foundation, a nonprofit organization that administers a large complex of state-developed sports facilities.  Given the age of the velodrome, the NSCF was prepared to close the facility permanently, but Friends of Velodrome Racing in MN has worked with the NSCF Board of Directors on a plan to preserve our unique public cycling facility.</p>
@@ -70,8 +80,8 @@
         </div>
         <h3>Contact Us</h3>
         <ul>
-          <li>email@address.com</li>
-          <li>Facebook</li>
+          <li>friendsofmnvelo@gmail.com</li>
+          <li><div class="fb-like" data-href="https://www.facebook.com/friendsofvelodromeracinginmn" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></li>
         </ul>
         <h3>Sponsors</h3>
         <p>People already contributing</p>
