--- a/index.html
+++ b/index.html
@@ -1,92 +1,133 @@
 <!doctype html>
 <html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Foundation | Welcome</title>
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- /Meta Tags Structural -->
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/app.css" />
 
-	<title> </title>
-	<meta name="description" content=" ">
-	<meta name="keywords" content=" ">
-	<meta name="Author" content=" ">
-	<!-- /Meta Tags Descriptive -->
+    <script src="js/vendor/modernizr.js"></script>
+  </head>
 
-	<!-- Favicon, and Touch icons: Note .ico file should be placed in your root directory of the site, with no link via html -->
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57-precomposed.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114-precomposed.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72-precomposed.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144-precomposed.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60-precomposed.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76-precomposed.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png">
-	<link rel="icon" type="image/png" href="/favicon-196x196.png" sizes="196x196">
-	<link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
-	<link rel="icon" type="image/png" href="/favicon-128x128.png" sizes="128x128">
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
-	<meta name="msapplication-square70x70logo" content="/mstile-70x70.png">
-	<meta name="msapplication-square150x150logo" content="/mstile-150x150.png">
-	<meta name="msapplication-wide310x150logo" content="/mstile-310x150.png">
-	<meta name="msapplication-square310x310logo" content="/mstile-310x310.png">
-	<!-- /Touch icons, microsoft tiles and png favicons -->
+  <body>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
-	<!-- /CSS -->
+  <nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="/">Friends of VeloMN</a></h1>
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
 
-	<script src="js/vendor/modernizr-2.8.0.min.js"></script>
-	<!-- /CSS -->
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="has-form">
+  <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
+</li>
+    </ul>
+  </section>
+</nav>
 
-	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
 
-</head>
+    <div class="row" style="margin-top:2em;">
+      <div class="large-12 columns">
+        <h1 style="font-weight:bold;">Save Track Cycling in Minnesota</h1>
+      </div>
+    </div>
 
-<body>
-<noscript>Notification about site needing JavaScript.</noscript>
-<!--[if lt IE 8]>
-	<p class="browsehappy">You are using an <strong>outdated</strong> browser. We recommend that you <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience, and your security online.</p>
-<![endif]-->
 
-<header>
-</header>
-<!-- /Header -->
+    <div class="row">
+      <div class="large-8 medium-8 columns">
+        <p>
+        <ul class="example-orbit" data-orbit  data-options="animation:slide;
+                  pause_on_hover:true;
+                  animation_speed:50;
+                  navigation_arrows:true;
+                  bullets:false">
+        <li>
+          <img src="img/slides-1.jpg" alt="slide 1" />
 
-<main>
+        </li>
+        <li class="active">
+          <img src="img/slides-2.jpg" alt="slide 1" />
 
-	<!-- Add your site or application content here -->
-	<p>This is Friends of Velo MN.</p>
+        </li>
+        <li>
+          <img src="img/slides-3.jpg" alt="slide 1" />
 
-</main>
-<!-- /Main Content -->
+        </li>
+          <li>
+          <img src="img/slides-4.jpg" alt="slide 1" />
 
-<footer>
-</footer>
-<!-- /Footer -->
+        </li>
+          <li>
+          <img src="img/slides-5.jpg" alt="slide 1" />
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+        </li>
+      </ul>
+    </p>
+        <p>The National Sports Center Velodrome - the only velodrome in Minnesota and a unique part of the USA’s small portfolio of  velodromes - needs major repairs immediately. The track is  currently closed until it can be repaired. These repairs will extend the life of the facility, keeping the track cycling community active until a new, future velodrome facility is completed. We are asking the broad track cycling community to help out.</p>
+        <p>Friends of Velodrome Racing in Minnesota – a newly-formed, volunteer-run nonprofit organization - is working to raise money to fund a repair that will cost about $60,000.</p>
+        <p>The NSC Velodrome is owned and operated by the National Sports Center Foundation, a nonprofit organization that administers a large complex of state-developed sports facilities. Given the age of the velodrome, the NSCF was prepared to close the facility permanently, but Friends of Velodrome Racing in MN has worked with the NSCF Board of Directors on a plan to preserve our unique public cycling facility.</p>
+      </div>
+      <div class="large-4 medium-4 columns panel callout radius">
+          <h3>Contact Us</h3>
+          <p>friendsofmnvelo@gmail.com</p>
+          <p><div class="fb-like" data-href="https://www.facebook.com/friendsofvelodromeracinginmn" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></p>
+          <h3>How You Can Help</h3>
+          <ul>
+              <li>Like us on Facebook to stay abreast of current news and events.</li>
+              <li>Attend parties and fundraisers.</li>
+              <li>If you can’t attend fundraisers, donate through <a href="http://www.gofundme.com/hucgnk"> GoFundMe</a> or Paypal.</li>
+              <li>Show up to ride and race next season, and purchase a season pass. </li>
+          </ul>
+      </div>
+    </div>
+    <div class="row"><p>&nbsp;</p></div>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	e.src='//www.google-analytics.com/analytics.js';
-	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	ga('create','UA-XXXXX-X');ga('send','pageview');
-</script>
-</body>
+    <div class="row">
+      <div class="large-8 medium-8 columns">
+        <h2>About the NSC</h2>
+        <p>The National Sports Center Velodrome is an outdoor, 250-meter wood strip velodrome - a bicycle racing track with turns banked at 43 degrees. Racers hit speeds of over 40mph on bikes with one gear and no brakes. Our velodrome was built 25 years ago as the sister track to the Barcelona Olympic Track. We have hosted major cycling events including the US Olympic Festival, the Elite Track Cycling National Championships, the Master's Track Cycling World Championships, the EDS Cup and the Minnesota Fixed Gear Classic.</p>
+        <p>Our velodrome program currently supports a thriving amateur racing community that includes everyone from casual riders to racers, National & World Champions and, a rich youth development pipeline that develops kids into accomplished athletes with a lifelong love for cycling sport. It represents Minnesota Cycling worldwide in generating riders who routinely punch above weight. This year was the most successful year ever – 500 riders and 200 racers used the velodrome in front of an audience of thousands. Juniors programs doubled in size and the women’s field quadrupled. Our community sent riders to Juniors, Elite, and Masters National Championships competitions, and five riders went to the Masters World Championships. There, they finished with five medals including a gold medal and a world record in the Team Pursuit!</p>
+        <p>The velodrome was built to last for 20 years, and it’s lasted 25 years. In that time, it’s had diligent maintenance from a group of volunteers. The “skeleton” needs to be reinforced to ensure the integrity of the surface. We have consulted numerous engineers, architects, and velodrome experts who are confident that with the proposed repairs will keep the velodrome safe and rideable for as long as another 8 years.</p>
+        </div>
+      <div class="large-4 medium-4 columns"></div>
+    </div>
+
+    <div class="row">
+      <div class="large-8 medium-8 columns">
+        <h2>FOVR’s Five-Year Plan</h2>
+        <p>FOVR-MN is working to address numerous concerns that the NSC has about continuing to operate the velodrome: track condition, operational costs, visibility, and corporate support. FOVR-MN isn’t just working to fund this repair – we’re working toward ongoing stability of a track cycling community in Minnesota.</p>
+        <p>  2014: Working with engineers to assess the condition of the NSC Velodrome and develop a remediation plan. Working with engineers, architects, and lawyers to ensure the safety of the velodrome for its users and a lack of liability concerns for its owners and operators.</p>
+        <p> 2014 – 2015: Raising money to fund the repair. Engaging engineers and architects in the repair.</p>
+        <p>  2015: Supporting high-profile events at the velodrome to continue building the track cycling community. Developing new corporate sponsors and supporters of the NSC Velodrome and the broader National Sports Center.</p>
+        <p>  2016 and ongoing: Working to reduce the NSC Velodrome’s deficit in its operating budget via recommendations to cut costs and working to raise revenue.</p>
+        <p>2017, 2018, and beyond:Assessing the viability of other velodrome projects in Minnesota and supporting them as we see appropriate.</p>
+      </div>
+      <div class="large-4 medium-4 columns"></div>
+    </div>
+
+
+
+
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+
+    </script>
+  </body>
 </html>
