--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
         <p>Friends of Velodrome Racing in Minnesota – a newly-formed, volunteer-run nonprofit organization - is working to raise money to fund a repair that will cost about $60,000.</p>
         <p>The NSC Velodrome is owned and operated by the National Sports Center Foundation, a nonprofit organization that administers a large complex of state-developed sports facilities. Given the age of the velodrome, the NSCF was prepared to close the facility permanently, but Friends of Velodrome Racing in MN has worked with the NSCF Board of Directors on a plan to preserve our unique public cycling facility.</p>
       </div>
-      <div class="large-4 medium-4 columns panel callout radius">
+      <div class="large-4 medium-4 columns">
+        <div class=" panel callout radius"
           <h3>Contact Us</h3>
           <p>friendsofmnvelo@gmail.com</p>
-          <p><div class="fb-like" data-href="https://www.facebook.com/friendsofvelodromeracinginmn" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></p>
+
           <h3>How You Can Help</h3>
           <ul>
               <li>Like us on Facebook to stay abreast of current news and events.</li>
@@ -93,6 +94,10 @@
               <li>If you can’t attend fundraisers, donate through <a href="http://www.gofundme.com/hucgnk"> GoFundMe</a> or Paypal.</li>
               <li>Show up to ride and race next season, and purchase a season pass. </li>
           </ul>
+        </div>
+
+        <p><div class="fb-like" data-href="https://www.facebook.com/friendsofvelodromeracinginmn" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></p>
+
       </div>
     </div>
     <div class="row"><p>&nbsp;</p></div>
