--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class=" panel callout radius"
           <h3>Contact Us</h3>
-          <p>friendsofmnvelo@gmail.com</p>
+          <p><a href="mailto:friendsofmnvelo@gmail.com">friendsofmnvelo@gmail.com</a></p>
 
           <h3>How You Can Help</h3>
           <ul>
