--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="large-4 medium-4 columns">
 
-        <div class=" panel callout radius"
+        <div class=" panel callout radius">
           <h3>Contact Us</h3>
           <p><a href="mailto:friendsofmnvelo@gmail.com">friendsofmnvelo@gmail.com</a></p>
 
