--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
+      <li><a href="about_NSC.html">About the NSC</a></li>
+      <li><a href="five_year_plan.html">Five Year Plan</a></li>
       <li class="has-form">
   <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
 </li>
@@ -101,35 +103,6 @@
 
       </div>
     </div>
-
-
-    <div class="row"><p>&nbsp;</p></div>
-
-    <div class="row">
-      <div class="large-8 medium-8 columns">
-        <h2>About the NSC</h2>
-        <p>The National Sports Center Velodrome is an outdoor, 250-meter wood strip velodrome - a bicycle racing track with turns banked at 43 degrees. Racers hit speeds of over 40mph on bikes with one gear and no brakes. Our velodrome was built 25 years ago as the sister track to the Barcelona Olympic Track. We have hosted major cycling events including the US Olympic Festival, the Elite Track Cycling National Championships, the Master's Track Cycling World Championships, the EDS Cup and the Minnesota Fixed Gear Classic.</p>
-        <p>Our velodrome program currently supports a thriving amateur racing community that includes everyone from casual riders to racers, National & World Champions and, a rich youth development pipeline that develops kids into accomplished athletes with a lifelong love for cycling sport. It represents Minnesota Cycling worldwide in generating riders who routinely punch above weight. This year was the most successful year ever – 500 riders and 200 racers used the velodrome in front of an audience of thousands. Juniors programs doubled in size and the women’s field quadrupled. Our community sent riders to Juniors, Elite, and Masters National Championships competitions, and five riders went to the Masters World Championships. There, they finished with five medals including a gold medal and a world record in the Team Pursuit!</p>
-        <p>The velodrome was built to last for 20 years, and it’s lasted 25 years. In that time, it’s had diligent maintenance from a group of volunteers. The “skeleton” needs to be reinforced to ensure the integrity of the surface. We have consulted numerous engineers, architects, and velodrome experts who are confident that with the proposed repairs will keep the velodrome safe and rideable for as long as another 8 years.</p>
-        </div>
-      <div class="large-4 medium-4 columns"></div>
-    </div>
-
-    <div class="row">
-      <div class="large-8 medium-8 columns">
-        <h2>FOVR’s Five-Year Plan</h2>
-        <p>FOVR-MN is working to address numerous concerns that the NSC has about continuing to operate the velodrome: track condition, operational costs, visibility, and corporate support. FOVR-MN isn’t just working to fund this repair – we’re working toward ongoing stability of a track cycling community in Minnesota.</p>
-        <p>  2014: Working with engineers to assess the condition of the NSC Velodrome and develop a remediation plan. Working with engineers, architects, and lawyers to ensure the safety of the velodrome for its users and a lack of liability concerns for its owners and operators.</p>
-        <p> 2014 – 2015: Raising money to fund the repair. Engaging engineers and architects in the repair.</p>
-        <p>  2015: Supporting high-profile events at the velodrome to continue building the track cycling community. Developing new corporate sponsors and supporters of the NSC Velodrome and the broader National Sports Center.</p>
-        <p>  2016 and ongoing: Working to reduce the NSC Velodrome’s deficit in its operating budget via recommendations to cut costs and working to raise revenue.</p>
-        <p>2017, 2018, and beyond:Assessing the viability of other velodrome projects in Minnesota and supporting them as we see appropriate.</p>
-      </div>
-      <div class="large-4 medium-4 columns"></div>
-    </div>
-
-
-
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
