--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -22,22 +23,25 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
   <nav class="top-bar" data-topbar role="navigation">
+
+
+
   <ul class="title-area">
     <li class="name">
-      <h1><a href="/">Friends of VeloMN</a></h1>
+      <h1><a href="/"></a></h1>
     </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li><a href="about_NSC.html">About the NSC</a></li>
-      <li><a href="five_year_plan.html">Five Year Plan</a></li>
+      <li><a href="about_NSC.html">About Us</a></li>
+      <li><a href="five_year_plan.html">Our Goal</a></li>
+      <li><a href="five_year_plan.html"><img src="img/velomn-logo.png"></a></li>
+      <li><a href="five_year_plan.html">About the Track</a></li>
       <li class="has-form">
-  <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
-</li>
+        <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
+      </li>
     </ul>
   </section>
 </nav>
