--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -22,13 +22,12 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-  <nav class="top-bar" data-topbar role="navigation">
-
-
+<div class="fixed">
+  <nav class="top-bar" data-topbar role="navigation" >
 
   <ul class="title-area">
     <li class="name">
-      <h1><a href="/"></a></h1>
+      <h1><span class="hidden-for-medium-up hide-for-small-only">Friends of Velodrome Racing in Minneasota</span></h1>
     </li>
   </ul>
 
@@ -37,7 +36,7 @@
     <ul class="right">
       <li><a href="about_NSC.html">About Us</a></li>
       <li><a href="five_year_plan.html">Our Goal</a></li>
-      <li><a href="five_year_plan.html"><img src="img/velomn-logo.png"></a></li>
+     <!-- <li class="logo"><a href="/"><img src="img/velomn-logo.png"></a></li>-->
       <li><a href="five_year_plan.html">About the Track</a></li>
       <li class="has-form">
         <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
@@ -45,6 +44,7 @@
     </ul>
   </section>
 </nav>
+</div>
 
 
     <div class="row" style="margin-top:2em;">
@@ -112,7 +112,6 @@
     <script src="js/foundation.min.js"></script>
     <script>
       $(document).foundation();
-
     </script>
   </body>
 </html>
