--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
   </head>
 
   <body>
+
     <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- /Facebook Plugin -->
 
 <div class="fixed">
   <nav class="top-bar" data-topbar role="navigation" >
 
   <ul class="title-area">
     <li class="name">
-      <h1><span class="hidden-for-medium-up hide-for-small-only">Friends of Velodrome Racing in Minneasota</span></h1>
-    </li>
+      <h1>
+        <span class="logo hidden-for-medium-up"><img src="img/velomn-logo.png"></span>
+        <span class="hidden-for-medium-up hide-for-small-only">Friends of Velodrome Racing in Minneasota</span>
+        </h1>
+     </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
@@ -36,7 +43,7 @@
     <ul class="right">
       <li><a href="about_NSC.html">About Us</a></li>
       <li><a href="five_year_plan.html">Our Goal</a></li>
-     <!-- <li class="logo"><a href="/"><img src="img/velomn-logo.png"></a></li>-->
+      <li class="hide-for-small-only"><a href="index.html" class="logo"><img src="img/velomn-logo.png"></a></li>
       <li><a href="five_year_plan.html">About the Track</a></li>
       <li class="has-form">
         <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
@@ -45,6 +52,7 @@
   </section>
 </nav>
 </div>
+<!-- /Navigation -->
 
 
     <div class="row" style="margin-top:2em;">
@@ -89,6 +97,15 @@
         <p>The NSC Velodrome is owned and operated by the National Sports Center Foundation, a nonprofit organization that administers a large complex of state-developed sports facilities. Given the age of the velodrome, the NSCF was prepared to close the facility permanently, but Friends of Velodrome Racing in MN has worked with the NSCF Board of Directors on a plan to preserve our unique public cycling facility.</p>
       </div>
       <div class="large-4 medium-4 columns">
+
+
+        <div class="panel callout radius">
+          <h3>Updates</h3>
+          <ul>
+              <li><a href="https://www.facebook.com/friendsofvelodromeracinginmn/posts/783693745038032">Latest News on Facebook</a></li>
+              <!--<li><a href="https://www.facebook.com/friendsofvelodromeracinginmn/posts/783693745038032">Message from the Track Director</a></li>-->
+          </ul>
+        </div>
 
         <div class=" panel callout radius">
           <h3>Contact Us</h3>
