--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Friends of VeloMN</title>
 
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/app.css?v0.3" />
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
@@ -41,10 +41,9 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li><a href="about_NSC.html">About Us</a></li>
       <li><a href="five_year_plan.html">Our Goal</a></li>
       <li class="hide-for-small-only"><a href="index.html" class="logo"><img src="img/velomn-logo.png"></a></li>
-      <li><a href="five_year_plan.html">About the Track</a></li>
+      <li><a href="about_NSC.html">About the Track</a></li>
       <li class="has-form">
         <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
       </li>
