--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends of VeloMN</title>
+    <title>Friends of Velodrome Racing in Minneasota</title>
+    <meta name="description" content="Help save track cycling in Minneasota. The Friends of Velodrome Racing in Minneasota is dedicated to supporting track cycling.">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/android-chrome-manifest.json">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css?v0.3" />
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/stylesheets/app.css" />
 
-    <script src="js/vendor/modernizr.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
+
   </head>
 
   <body>
@@ -25,12 +44,12 @@
     <!-- /Facebook Plugin -->
 
 <div class="fixed">
-  <nav class="top-bar" data-topbar role="navigation" >
+  <nav class="top-bar" data-topbar role="navigation" data-options="animation_speed:500000;timer_speed: 100:" >
 
   <ul class="title-area">
     <li class="name">
       <h1>
-        <span class="logo hidden-for-medium-up"><img src="img/velomn-logo.png"></span>
+        <span class="logo hidden-for-medium-up"><img src="assets/img/velomn-logo.svg"></span>
         <span class="hidden-for-medium-up hide-for-small-only">Friends of Velodrome Racing in Minneasota</span>
         </h1>
      </li>
@@ -41,9 +60,9 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li><a href="five_year_plan.html">Our Goal</a></li>
-      <li class="hide-for-small-only"><a href="index.html" class="logo"><img src="img/velomn-logo.png"></a></li>
-      <li><a href="about_NSC.html">About the Track</a></li>
+      <li><a href="plan.html">Our Goal</a></li>
+      <li class="hide-for-small-only"><a href="index.html" class="logo"><img src="assets/img/velomn-logo.svg"></a></li>
+      <li><a href="about.html">About the Track</a></li>
       <li class="has-form">
         <a href="http://www.gofundme.com/hucgnk" target="_new" class="button radius">Donate Today!</a>
       </li>
@@ -54,43 +73,40 @@
 <!-- /Navigation -->
 
 
-    <div class="row" style="margin-top:2em;">
-      <div class="large-12 columns">
-        <h1 style="font-weight:bold;">Save Track Cycling in Minnesota</h1>
+<section class="hero">
+  <h2>Save Track Cycling in Minnesota</h2>
+  <ul data-orbit  data-options="slide_number: false">
+    <li>
+      <img src="assets/img/hero-1.jpg" alt="slide 1" />
+      <div class="orbit-caption">
+        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
       </div>
-    </div>
+    </li>
+    <li class="active">
+      <img src="assets/img/hero-2.jpg" alt="slide 2" />
+      <div class="orbit-caption">
+        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+      </div>
+    </li>
+    <li>
+      <img src="assets/img/hero-3.jpg" alt="slide 3" />
+      <div class="orbit-caption">
+        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+      </div>
+    </li>
+    <li>
+      <img src="assets/img/hero-4.jpg" alt="slide 3" />
+      <div class="orbit-caption">
+        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+      </div>
+    </li>
+  </ul>
+</section>
 
 
     <div class="row">
       <div class="large-8 medium-8 columns">
-        <p>
-        <ul class="example-orbit" data-orbit  data-options="animation:slide;
-                  pause_on_hover:true;
-                  animation_speed:50;
-                  navigation_arrows:true;
-                  bullets:false">
-        <li>
-          <img src="img/slides-1.jpg" alt="slide 1" />
 
-        </li>
-        <li class="active">
-          <img src="img/slides-2.jpg" alt="slide 1" />
-
-        </li>
-        <li>
-          <img src="img/slides-3.jpg" alt="slide 1" />
-
-        </li>
-          <li>
-          <img src="img/slides-4.jpg" alt="slide 1" />
-
-        </li>
-          <li>
-          <img src="img/slides-5.jpg" alt="slide 1" />
-
-        </li>
-      </ul>
-    </p>
         <p>The National Sports Center Velodrome - the only velodrome in Minnesota and a unique part of the USA’s small portfolio of  velodromes - needs major repairs immediately. The track is  currently closed until it can be repaired. These repairs will extend the life of the facility, keeping the track cycling community active until a new, future velodrome facility is completed. We are asking the broad track cycling community to help out.</p>
         <p>Friends of Velodrome Racing in Minnesota – a newly-formed, volunteer-run nonprofit organization - is working to raise money to fund a repair that will cost about $60,000.</p>
         <p>The NSC Velodrome is owned and operated by the National Sports Center Foundation, a nonprofit organization that administers a large complex of state-developed sports facilities. Given the age of the velodrome, the NSCF was prepared to close the facility permanently, but Friends of Velodrome Racing in MN has worked with the NSCF Board of Directors on a plan to preserve our unique public cycling facility.</p>
@@ -124,10 +140,35 @@
       </div>
     </div>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation/foundation.orbit.js"></script>
+    <script src="assets/js/app.js"></script>
+        <script>
+      $(document).foundation({
+      orbit: {
+        animation: 'slide',
+        timer_speed: 1000,
+        pause_on_hover: true,
+        slide_number: false,
+        animation_speed: 500,
+        navigation_arrows: true,
+        bullets: false
+      }
+    });
     </script>
+
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59045909-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
