--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   </head>
 
-  <body>
+  <body class="pad">
 
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -44,7 +44,7 @@
     <!-- /Facebook Plugin -->
 
 <div class="fixed">
-  <nav class="top-bar" data-topbar role="navigation" data-options="animation_speed:500000;timer_speed: 100:" >
+  <nav class="top-bar" data-topbar role="navigation"  >
 
   <ul class="title-area">
     <li class="name">
@@ -73,9 +73,10 @@
 <!-- /Navigation -->
 
 
+
 <section class="hero">
   <h2>Save Track Cycling in Minnesota</h2>
-  <ul data-orbit  data-options="slide_number: false">
+  <ul data-orbit data-options="slide_number: false;animation_speed:10000;timer_speed: 50000000:">
     <li>
       <img src="assets/img/hero-1.jpg" alt="slide 1" />
       <div class="orbit-caption">
@@ -103,6 +104,13 @@
   </ul>
 </section>
 
+<section class="row" style="margin-top:1em;margin-bottom:-1.3em;">
+  <div class="large-12 columns">
+    <div class=" panel callout radius text-center" style="z-index: 3;">
+      <h3><a href="http://www.facebook.com/NSCVelodrome/posts/10152992908949029">An Open Letter from the Velodrome Director</a></h3>
+    </div>
+  </div>
+</section>
 
     <div class="row">
       <div class="large-8 medium-8 columns">
