--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
     <li>
       <img src="assets/img/hero-1.jpg" alt="slide 1" />
       <div class="orbit-caption">
-        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+        Minnesota has one of the best velodromes in the country. Let’s keep it that way!
       </div>
     </li>
     <li class="active">
       <img src="assets/img/hero-2.jpg" alt="slide 2" />
       <div class="orbit-caption">
-        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+        Minnesota has one of the best velodromes in the country. Let’s keep it that way!
       </div>
     </li>
     <li>
       <img src="assets/img/hero-3.jpg" alt="slide 3" />
       <div class="orbit-caption">
-        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+        Minnesota has one of the best velodromes in the country. Let’s keep it that way!
       </div>
     </li>
     <li>
       <img src="assets/img/hero-4.jpg" alt="slide 3" />
       <div class="orbit-caption">
-        Minneasota has one of the best velodromes in the country. Let’s keep it that way!
+        Minnesota has one of the best velodromes in the country. Let’s keep it that way!
       </div>
     </li>
   </ul>
